# ribbon

./: Cargo.toml  contributing.md  readme.md
crates/ribbon-app/: Cargo.toml
crates/ribbon-app/src/: main.rs
crates/ribbon-buffer/: Cargo.toml
crates/ribbon-buffer/src/: lib.rs  rope.rs
crates/ribbon-core/: Cargo.toml
crates/ribbon-core/src/: buffer.rs  color.rs  error.rs  event.rs  id.rs  layout.rs  lib.rs  primitives.rs
crates/ribbon-lua/: Cargo.toml
crates/ribbon-lua/src/: engine.rs  lib.rs
crates/ribbon-renderer/: Cargo.toml
crates/ribbon-renderer/src/: engine.rs  layout.rs  lib.rs  quad.rs
crates/ribbon-renderer/wgsl/: quad.wgsl
crates/ribbon-tui/: Cargo.toml
crates/ribbon-tui/src/: draw.rs  event.rs  layout.rs  lib.rs  renderer.rs  terminal.rs
docs/: architecture.md  overview.md
runtime/core/: buffer.lua  config.lua  cursor.lua  events.lua  init.lua  keymap.lua  log.lua  modes.lua  plugin.lua  theme.lua  ui.lua  utils.lua
runtime/default/: editor.lua  input.lua  keymaps.lua  layout.lua
