[workspace]
members = [
    "crates/ribbon-core",
    "crates/ribbon-buffer",
    "crates/ribbon-renderer",
    "crates/ribbon-app",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Unlicense"

[workspace.dependencies]
ribbon-core = { path = "crates/ribbon-core" }
ribbon-buffer = { path = "crates/ribbon-buffer" }
ribbon-renderer = { path = "crates/ribbon-renderer" }

thiserror = "2.0.18"
wgpu = "29.0.3"
winit = "0.30.13"
