[workspace]
members = [
    "crates/ribbon-core",
    "crates/ribbon-buffer",
    "crates/ribbon-tui",
    "crates/ribbon-app",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Unlicense"

[workspace.dependencies]
ribbon-core    = { path = "crates/ribbon-core" }
ribbon-buffer  = { path = "crates/ribbon-buffer" }
ribbon-tui     = { path = "crates/ribbon-tui" }

thiserror  = "2.0.18"
ratatui    = "0.29"
crossterm  = "0.28"
