[workspace]
members = [
    "crates/ribbon-core",
    "crates/ribbon-buffer",
    "crates/ribbon-tui",
    "crates/ribbon-lua",
    "crates/ribbon-app",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Unlicense"

[workspace.dependencies]
ribbon-core = { path = "crates/ribbon-core" }
ribbon-buffer = { path = "crates/ribbon-buffer" }
ribbon-tui = { path = "crates/ribbon-tui" }
ribbon-lua = { path = "crates/ribbon-lua" }

thiserror = "2.0.18"
ratatui = "0.30"
crossterm = "0.29"
mlua = { version = "0.11.6", features = ["lua55", "vendored"] }
